--- a/src/Gmail-clone/SidebarOption.css
+++ b/src/Gmail-clone/SidebarOption.css
@@ -1,15 +1,47 @@
-import React from 'react'
-
-import './SidebarOption.css' 
-function SidebarOption( {title , number , Icon , selected}) {
-    return (
-        <div className = {`sidebarOption ${selected && 'sidebarOption--active '} `}>
-                <Icon></Icon>
-                <h3>{title}</h3>
-                <p>{number}</p>
-        </div>
-    )
+.sidebarOption {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 5px;
+    height: 40px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    cursor: pointer;
+    color: #d93025 ;
 }
 
-export default SidebarOption
- 
+.sidebarOption:hover,
+.sidebarOption:hover > h3,
+.sidebarOption:hover > p ,
+.sidebarOption--active,
+.sidebarOption--active > h3 ,
+.sidebarOption--active > p {
+    font-weight: 800 !important;
+    color: #c04b37;
+    background-color: #fcecec ;
+}
+
+
+.sidebarOption > .MuiSvgIcon {
+    padding: 5px;
+}
+
+.sidebarOption > h3 {
+    flex: 1;
+    margin-left: 10px;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.sidebarOption > p {
+        display: none;
+        font-weight: 300;
+}
+
+.sidebarOption:hover > p{
+    display: inline;
+}
+
+.sidebarOption--active > p{
+    display: inline !important;
+}
