--- a/src/Gmail-clone/EmailRow.css
+++ b/src/Gmail-clone/EmailRow.css
@@ -5,6 +5,7 @@
     border-bottom: 1px solid whitesmoke;
     cursor: pointer;
     z-index: 999;
+    position: sticky;
 
 }
 
@@ -15,6 +16,7 @@
 
 .emailRow__options {
     display: flex;
+    margin-left: 10px;
 }
 
 .emailRow__title > h3 {
@@ -24,6 +26,7 @@
 
 .emailRow__message {
     display: flex;
+    margin-left: 10px;
 }
 
 .emailRow__message > h4 {
@@ -33,14 +36,17 @@
     padding-left: 5px;
     padding-right: 5px;
     text-overflow: ellipsis;
+    margin-left: 10px;
 }
 
 .emailRow__time  {
     padding-right: 15px;
     font-size: 9px;
     font-weight: bold ;
+    margin-left: 10px;
 }
 .emailRow__description {
     font-weight: 400;
     color: gray;
+    margin-left: 10px;
 }
