--- a/src/Gmail-clone/Mail.css
+++ b/src/Gmail-clone/Mail.css
@@ -1,7 +1,10 @@
 .mail {
     flex: 1;
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
     /* background: transparent; */
+    background-image: url(https://i.redd.it/qwd83nc4xxf41.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 95vh;
 }
 
@@ -25,7 +28,7 @@
     flex-direction: column;
     margin: 30px;
     background-color: white;
-    background-image: url(https://images.pexels.com/photos/3512848/pexels-photo-3512848.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
+    background-image: url(https://images.unsplash.com/photo-1534504969382-fec3d9ffdd73?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=812&q=80);
     background-size: cover;
     padding: 20px;
     height: 70vh;
